slider: fix z-index collision with navigation

--- a/assets/styles/modules/map.scss
+++ b/assets/styles/modules/map.scss
@@ -12,7 +12,7 @@
   }
 
   &__slider {
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .7);
     bottom: 0;
     display: none;
     left: 0;
@@ -21,7 +21,7 @@
     padding-top: 1.5rem;
     position: absolute;
     width: 100%;
-    z-index: 1000;
+    z-index: 800;
 
     @include small {
       display: block;
