--- a/assets/styles/modules/slider.scss
+++ b/assets/styles/modules/slider.scss
@@ -1,10 +1,12 @@
 .slider {
   display: block;
-  margin-bottom: 1rem !important;
+  margin-bottom: .8rem !important;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   user-select: none;
   vertical-align: middle;
-  width: 100%;
+  width: 70%;
 
   &-track {
     background-color: $text-color;
